# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SDFGen/: CMakeLists.txt  config.h.in  main.cpp
src/: BendingConstraint.h  Box.cpp  Box.h  BoxConfig.h  CMakeLists.txt  CollisionConstraint.h  Constraint.h  DistanceConstraint.h  HelloWorld_Kernel.cl  Particle.h  Scene.cpp  Scene.h  VolumeConstraint.h  camera.cpp  camera.h  debug.cpp  debug.h  glHelper.cpp  glHelper.h  glad.c  input.cpp  input.h  intersections.h  main.cpp  performance.cpp  performance.h  physics.cpp  physics.h  primitives.h
src/GPU/: GPU.cpp  GPU.h  passthrough.vert  solveConstraints.frag
src/collision/: KDTree.cpp  KDTree.h  bruteforce.cpp  bruteforce.h  collision.cpp  collision.h  grid.cpp  grid.h  octree.cpp  octree.h
src/constraints/: BendingConstraint.h  CollisionConstraint.h  Constraint.h  ConstraintData.cpp  ConstraintData.h  DistanceConstraint.h  DistanceConstraintData.cpp  DistanceConstraintData.h  FixedPointConstraintData.cpp  FixedPointConstraintData.h  PlaneCollisionConstraintData.cpp  PlaneCollisionConstraintData.h  TriangleCollisionConstraintData.cpp  TriangleCollisionConstraintData.h  VolumeConstraint.h  visualizeConstraint.h
src/devices/: CPU.cpp  CPU.h  Device.cpp  Device.h  GPU.cpp  GPU.h  solveConstraints.frag  updatePosition.frag  updateVelocity.frag  verletIntegration.frag
src/glad/: glad.h
src/imgui/: imgui_impl_glfw_gl3.cpp
src/intersections/: Intersection.h  SphereIntersection.cpp  SphereIntersection.h  Triangle.cpp  Triangle.h  tests.cpp  tests.h
src/linmath/: Aabb.cpp  Aabb.h  Common.h  Quaternion.cpp  Quaternion.h  SmallVector2.h  SmallVector2.inl  SmallVector3.h  SmallVector3.inl  SmallVector4.h  SmallVector4.inl  float2.cpp  float2.h  float3.cpp  float3.h  float3x3.cpp  float3x3.h  float4.cpp  float4.h  float4x4.cpp  float4x4.h  int2.cpp  int2.h  int3.cpp  int3.h  int4.cpp  int4.h  inverse.h
src/models/: Box.cpp  Box.h  Cloth.cpp  Cloth.h  ModelData.cpp  ModelData.h  ModelRenderer.cpp  ModelRenderer.h  bunnyCentered.sdf  bunnyCentered_smaller.sdf  bunny_watertight.sdf  bunny_watertight_smaller.sdf  cone.sdf  cone_smaller.sdf  cube.sdf  cubeHole.sdf  cylinder.sdf  cylinder_smaller.sdf  model.cpp  model.h  modelConfig.h  saturnus.sdf  sphere.sdf  sphere_smaller.sdf  torus.sdf  torus_smaller.sdf
src/particles/: Box.cpp  Box.h  BoxConfig.h  Particle.h  ParticleData.cpp  ParticleData.h  ParticleRenderer.cpp  ParticleRenderer.h
src/primitives/: BoundingVolume.cpp  BoundingVolume.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/scenes/: Scene.cpp  Scene.h
src/shaders/: particle.frag.glsl  particle.vert.glsl  particleGPU.vert.glsl  simple.frag  simple.vert  simpleLine.frag  simpleLine.vert
